--- a/src/styles/micss.css
+++ b/src/styles/micss.css
@@ -1,6 +1,10 @@
 @import "https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css";
 @tailwind base;
 
+:root {
+  color-scheme: light dark;
+}
+
 @layer base {
     input, textarea {
         @apply                 
