--- a/src/styles/micss.css
+++ b/src/styles/micss.css
@@ -53,8 +53,7 @@
       border-gray-300
       text-gray-900 text-sm rounded transition ease-in-out
       focus:ring-blue-500
-      focus:border-blue-500 block w-full px-2 py-1 border-2
-      dark:bg-gray-700
+      focus:border-blue-500 block w-full px-2 py-1 border-2      
       dark:border-gray-600
       dark:placeholder-gray-400
       dark:text-white
@@ -64,7 +63,7 @@
 
     .checkbox-1{
       @apply
-      w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600
+      w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:border-gray-600
     }
 
     button {
@@ -146,7 +145,7 @@
 
     table thead {
       @apply
-      text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400
+      text-gray-700 bg-gray-50 dark:text-gray-400
     }
 
     table thead>th {
@@ -173,9 +172,8 @@
       @apply
       p-6 
       bg-white border 
-      border-gray-200 
-      dark:bg-gray-800 
-      dark:border-gray-700
+      border-gray-200       
+      dark:border-gray-200
       rounded-lg shadow 
     }
 
@@ -233,37 +231,34 @@
       @apply      
       text-blue-800
       bg-blue-100
-      dark:bg-gray-700 dark:text-blue-500 border border-blue-500
+      dark:text-blue-500 border border-blue-500
     }
 
     .badge.secondary {
       @apply      
       text-gray-800
       bg-gray-100
-      dark:bg-gray-700 dark:text-gray-400 border border-gray-500
+      dark:text-gray-400 border border-gray-500
     }
 
     .badge.danger {
       @apply            
       text-red-800
-      bg-red-100
-      dark:bg-gray-700 
+      bg-red-100      
       dark:text-red-500 border border-red-500
     }
 
     .badge.success {
       @apply            
       text-green-800
-      bg-green-100
-      dark:bg-gray-700 
+      bg-green-100      
       dark:text-green-500 border border-green-500
     }
 
     .badge.warning {
       @apply            
       text-yellow-800
-      bg-yellow-100
-      dark:bg-gray-700 
+      bg-yellow-100      
       dark:text-yellow-500 border border-yellow-500
     }
 
